--- a/research.html
+++ b/research.html
@@ -12,7 +12,7 @@
 	<meta name="keywords" content="Friederike Dittberner, research, papers">
 
 	<link rel="stylesheet" href="styles.css">
-	<link rel="canonical" href="https://userpage.fu-berlin.de/dittberner/research.html">
+	<link rel="canonical" href="https://friederikedittberner.github.io">
 </head>
 
 <body>
