--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<meta name="keywords" content="Friederike Dittberner, contact">
 
 	<link rel="stylesheet" href="styles.css">
-	<link rel="canonical" href="https://userpage.fu-berlin.de/dittberner/contact.html">
+	<link rel="canonical" href="https://friederikedittberner.github.io">
 </head>
 
 <body>
