--- a/teaching.html
+++ b/teaching.html
@@ -12,7 +12,7 @@
 	<meta name="keywords" content="Friederike Dittberner, teaching">
 
 	<link rel="stylesheet" href="styles.css">
-	<link rel="canonical" href="https://userpage.fu-berlin.de/dittberner/teaching.html">
+	<link rel="canonical" href="https://friederikedittberner.github.io">
 </head>
 
 <body>
