--- a/teaching.html
+++ b/teaching.html
@@ -52,7 +52,7 @@
 					<li><a href="DG2/DG2-9.pdf">&Uuml;bungsblatt 9</a></li>
 					<li><a href="DG2/DG2-10.pdf">&Uuml;bungsblatt 10</a></li>
         </ul>
-				<p>Graphischer Mittlerer Kr&uuml;mmungsflu&szlig;</p>
+				<p>Graphischer Mittlerer Kr&uuml;mmungsfluss</p>
 				<ul>
 					<li><a href="GMKF/GMKF-1.pdf">&Uuml;bungsblatt 1</a></li>
 					<li><a href="GMKF/GMKF-2.pdf">&Uuml;bungsblatt 2</a></li>
