--- a/teaching.html
+++ b/teaching.html
@@ -52,6 +52,7 @@
 					<li><a href="DG2/DG2-9.pdf">&Uuml;bungsblatt 9</a></li>
 					<li><a href="DG2/DG2-10.pdf">&Uuml;bungsblatt 10</a></li>
 					<li><a href="DG2/DG2-11.pdf">&Uuml;bungsblatt 11</a></li>
+					<li><a href="DG2/DG2-12.pdf">&Uuml;bungsblatt 12</a></li>
         </ul>
 				<p>Graphischer Mittlerer Kr&uuml;mmungsfluss</p>
 				<ul>
