--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<title>Contact</title>
 	<meta name="description" content="This is Friederike Dittberner's personal website.">
 
-	<meta name="keywords" content="Friederike Dittberner, contact">
+	<meta name="keywords" content="Friederike Dittberner, math, contact">
 
 	<link rel="stylesheet" href="styles.css">
 	<link rel="canonical" href="https://friederikedittberner.github.io">
