--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
 			</header>
 			<h3>Preprints</h3>
 			<ul>
-				<li><a href="https://arxiv.org/abs/1809.08643">Curve Flows with a Global Forcing Term</a>, </li>
+				<li><a href="https://arxiv.org/abs/1809.08643">Curve Flows with a Global Forcing Term</a></li>
 			</ul>
 			<h3>Thesis</h3>
 			<ul>
