--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
 
 	<meta name="keywords" content="Friederike Dittberner, math, contact">
 
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="canonical" href="https://friederikedittberner.github.io">
 </head>
 
