--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -450,10 +450,9 @@
 
             <div class="row">
               <div class="col-md-12 mb-md-0 mb-5 registration-form">
-
                 <form id="contact-form" name="contact-form" action="https://formspree.io/gagt19@web.de" method="POST">
-                  <!-- action="registration-mail.php" -->
-
+                    <!-- action="registration-mail.php" -->
+                    
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-check mb-2 form-check-inline">
@@ -468,7 +467,7 @@
                     <div class="col-md-6">
                       <div class="md-form mb-0">
                         <input type="text" id="title" name="title" class="form-control" placeholder="Title">
-                        <label for="title" class="label">Title</label>
+                        <!-- <label for="title" class="label">Title</label> -->
                       </div>
                     </div>
                   </div>
@@ -477,13 +476,13 @@
                    <div class="col-md-6">
                      <div class="md-form mb-0">
                        <input type="text" id="firstname" name="firstname" class="form-control" placeholder="First name">
-                       <label for="firstname" class="label">First name</label>
+                       <!-- <label for="firstname" class="label">First name</label> -->
                      </div>
                    </div>
                    <div class="col-md-6">
                      <div class="md-form mb-0">
                        <input type="text" id="lastname" name="lastname" class="form-control" placeholder="Last name">
-                       <label for="lastname" class="label">Last name</label>
+                       <!-- <label for="lastname" class="label">Last name</label> -->
                      </div>
                    </div>
                  </div>
@@ -492,13 +491,13 @@
                    <div class="col-md-6">
                      <div class="md-form mb-0">
                        <input type="text" id="affiliation" name="affiliation" class="form-control" placeholder="Affiliation">
-                       <label for="affiliation" class="label">Affiliation</label>
+                       <!-- <label for="affiliation" class="label">Affiliation</label> -->
                      </div>
                    </div>
                    <div class="col-md-6">
                      <div class="md-form mb-0">
                        <input type="text" id="position" name="position" class="form-control" placeholder="Position">
-                       <label for="position" class="label">Position</label>
+                       <!-- <label for="position" class="label">Position</label> -->
                      </div>
                    </div>
                  </div>
@@ -507,7 +506,7 @@
                    <div class="col-md-12">
                      <div class="md-form mb-0">
                        <input type="text" id="email" name="email" class="form-control" placeholder="Email">
-                       <label for="email" class="label">Email</label>
+                       <!-- <label for="email" class="label">Email</label> -->
                      </div>
                    </div>
                  </div>
@@ -516,14 +515,16 @@
                    <div class="col-md-12">
                       <div class="md-form">
                          <textarea type="text" id="comment" name="comment" rows="1" class="form-control md-textarea" placeholder="Comments"></textarea>
-                         <label for="comment" class="label">Comments</label>
+                         <!-- <label for="comment" class="label">Comments</label> -->
                        </div>
                     </div>
                  </div>
-                 <button type="submit">Send</button>
+                 <div class="text-center text-md-left registration-btn">
+                   <button class="btn btn-primary" type="submit">Send</button>
+                 </div>
                 </form>
-<!--
-                <div class="text-center text-md-left registration-btn">
+
+                <!-- <div class="text-center text-md-left registration-btn">
                   <a class="btn btn-primary" onclick="validateRegForm()">Send</a>
                 </div>
                 <div class="status"></div> -->
