--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -586,8 +586,8 @@
     <script src="js/validateFundForm.js"></script>
 
     <!-- formspree file upload -->
-    <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
-    <script src="https://ucarecdn.com/libs/widget/2.10.2/uploadcare.full.min.js" charset="utf-8"></script>
+    <!-- <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
+    <script src="https://ucarecdn.com/libs/widget/2.10.2/uploadcare.full.min.js" charset="utf-8"></script> -->
 
   </body>
 
