--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -17,6 +17,10 @@
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 
+    <!-- formspree file upload -->
+    <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
+    <script src="https://ucarecdn.com/libs/widget/2.10.2/uploadcare.full.min.js" charset="utf-8"></script>
+
   </head>
 
   <body id="page-top">
@@ -473,18 +477,9 @@
                        <div>
                          <input type="hidden" role="uploadcare-uploader" name="funding-cv"/>
                        </div>
-                       <!-- <textarea type="text" id="funding-cv" name="funding-cv" rows="3" class="form-control md-textarea" placeholder="Please copy CV here"></textarea> -->
                      </div>
                    </div>
                  </div>
-
-                 <!-- <div class="row">
-                   <div class="col-md-12">
-                      <div class="md-form">
-                         <textarea type="text" id="funding-comment" name="funding-comment" rows="1" class="form-control md-textarea" placeholder="Comments"></textarea>
-                       </div>
-                    </div>
-                 </div> -->
                 </form>
                 <p class="small">
                   *Mandatory information.
@@ -590,10 +585,6 @@
     <script src="js/SendEmail.js"></script>
     <script src="js/validateRegForm.js"></script>
     <script src="js/validateFundForm.js"></script>
-
-    <!-- formspree file upload -->
-    <!-- <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
-    <script src="https://ucarecdn.com/libs/widget/2.10.2/uploadcare.full.min.js" charset="utf-8"></script> -->
 
   </body>
 
