--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -256,7 +256,7 @@
                 </tbody>
               </table>
             </div> -->
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
@@ -289,7 +289,7 @@
 
             <div class="row">
               <div class="col-md-12 mb-md-0 mb-5 registration-form">
-                <form id="registratioxn-form" name="registration-form" action="https://formspree.io/gagt2019@gmail.com" method="POST">
+                <form id="registration-form" name="registration-form" action="https://formspree.io/gagt2019@gmail.com" method="POST">
                   <!-- <input type="hidden" name="_subject" value="Registration"/> -->
                   <input type="text" name="_gotcha" style="display:none"/>
                   <div class="row">
@@ -307,7 +307,7 @@
                         <label class="form-check-label" for="registration-mr">Mr.</label>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 subrow">
                       <div class="md-form mb-0">
                         <input type="text" id="registration-title" name="registration-title" class="form-control" placeholder="Title">
                       </div>
@@ -315,12 +315,12 @@
                   </div>
 
                  <div class="row">
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="registration-firstname" name="registration-firstname" class="form-control" placeholder="First name*">
                      </div>
                    </div>
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="registration-lastname" name="registration-lastname" class="form-control" placeholder="Last name*">
                      </div>
@@ -328,12 +328,12 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="registration-affiliation" name="registration-affiliation" class="form-control" placeholder="Affiliation*">
                      </div>
                    </div>
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="registration-position" name="registration-position" class="form-control" placeholder="Position*">
                      </div>
@@ -341,7 +341,7 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-12">
+                   <div class="col-md-12 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="registration-email" name="registration-email" class="form-control" placeholder="Email*">
                      </div>
@@ -349,7 +349,7 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-12">
+                   <div class="col-md-12 subrow">
                       <div class="md-form">
                          <textarea type="text" id="registration-comment" name="registration-comment" rows="1" class="form-control md-textarea" placeholder="Comments"></textarea>
                        </div>
@@ -421,12 +421,12 @@
                   </div>
 
                  <div class="row">
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="funding-firstname" name="funding-firstname" class="form-control" placeholder="First name*">
                      </div>
                    </div>
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="funding-lastname" name="funding-lastname" class="form-control" placeholder="Last name*">
                      </div>
@@ -434,12 +434,12 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="funding-affiliation" name="funding-affiliation" class="form-control" placeholder="Affiliation*">
                      </div>
                    </div>
-                   <div class="col-md-6">
+                   <div class="col-md-6 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="funding-position" name="funding-position" class="form-control" placeholder="Graduate student / postdoc*">
                      </div>
@@ -447,7 +447,7 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-12">
+                   <div class="col-md-12 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="funding-email" name="funding-email" class="form-control" placeholder="Email*">
                      </div>
@@ -455,7 +455,7 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-12">
+                   <div class="col-md-12 subrow">
                      <div class="md-form mb-0">
                        <input type="text" id="funding-homepage" name="funding-homepage" class="form-control" placeholder="Homepage*">
                      </div>
@@ -463,7 +463,7 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-12">
+                   <div class="col-md-12 subrow">
                      <div class="md-form mb-0">
                        <textarea type="text" id="funding-interests" name="funding-interests" rows="2" class="form-control md-textarea" placeholder="Interests in conference*"></textarea>
                      </div>
@@ -471,7 +471,7 @@
                  </div>
 
                  <div class="row">
-                   <div class="col-md-12">
+                   <div class="col-md-12 subrow">
                      <div class="md-form">
                        <label>Upload CV*:</label>
                        <div>
