--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -289,7 +289,7 @@
 
             <div class="row">
               <div class="col-md-12 mb-md-0 mb-5 registration-form">
-                <form id="registration-form" name="registration-form" action="https://formspree.io/gagt2019@gmail.com" method="POST">
+                <form id="registration-form" name="registration-form" method="POST">
                   <!-- <input type="hidden" name="_subject" value="Registration"/> -->
                   <input type="text" name="_gotcha" style="display:none"/>
                   <div class="row">
