--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -269,23 +269,6 @@
             <p>Please fill out the registration form below.
               Registration is free but compulsory.
             </p>
-            <!-- Please send us an <a href="SendRegEmail" class="SendRegEmail">Email</a> at gagt2019@gmail.com with the following infomation:
-            </p>
-            <ul>
-              <li>First name</li>
-              <li>Last name</li>
-              <li>Affiliation</li>
-              <li>Position</li>
-              <li>Email</li>
-            </ul>
-
-            <p>Deadline for registration is <span style="font-weight: bold">?? February 2018</span>.
-            </p>
-
-            <div class="text-center text-md-left registration-btn">
-              <a class="btn btn-primary SendRegEmail">Email template</a>
-            </div> -->
-
 
             <div class="row">
               <div class="col-md-12 mb-md-0 mb-5 registration-form">
@@ -377,30 +360,15 @@
             <h2>Funding for young researchers</h2>
             <p>We have some limited funding available for graduate students or postdocs.
             If you are interested in attending the conference and would like to apply for funding, please fill out the form below and attach a current CV.
-            <!-- please send us an <a href="">Email</a> at gagt2019.funding@gmail.com with the following infomation: -->
             </p>
-            <!-- <ul>
-              <li>First name</li>
-              <li>Last name</li>
-              <li>Affiliation</li>
-              <li>Position</li>
-              <li>Email</li>
-              <li>Homepage</li>
-              <li>Interests in conference</li>
-              <li>CV</li>
-            </ul> -->
 
             <p>Deadline for applications is <span style="font-weight: bold">?? December 2018</span>.
             We will then evaluate all applications and inform you about the decisions in the beginning of 2019.
             </p>
 
-            <!-- <div class="text-center text-md-left registration-btn">
-              <a class="btn btn-primary SendFundEmail">Email template</a>
-            </div> -->
-
             <div class="row">
               <div class="col-md-12 mb-md-0 mb-8 registration-form">
-                <form id="funding-form" name="funding-form" action="https://formspree.io/gagt2019.funding@gmail.com" method="POST">
+                <form id="funding-form" name="funding-form" method="POST">
                   <!-- <input type="hidden" name="_subject" value="Funding"/> -->
                   <input type="text" name="_gotcha" style="display:none"/>
                   <div class="row">
