--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -146,7 +146,7 @@
                 Karen Vogtmann
               </li>
             </ul>
-            <p>* to be confirmed</p>
+            <p class="small">* to be confirmed</p>
           </div>
         </div>
       </div>
@@ -369,7 +369,6 @@
             <div class="row">
               <div class="col-md-12 mb-md-0 mb-8 registration-form">
                 <form id="funding-form" name="funding-form" method="POST">
-                  <!-- <input type="hidden" name="_subject" value="Funding"/> -->
                   <input type="text" name="_gotcha" style="display:none"/>
                   <div class="row">
                     <div class="col-md-6">
