--- a/gagt19/index.html
+++ b/gagt19/index.html
@@ -266,7 +266,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Registration</h2>
-            <p>Please fill out the registration form below.
+            <p class="lead">Please fill out the registration form below.
               Registration is free but compulsory.
             </p>
 
@@ -358,11 +358,11 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Funding for young researchers</h2>
-            <p>We have some limited funding available for graduate students or postdocs.
+            <p class="lead">We have some limited funding available for graduate students or postdocs.
             If you are interested in attending the conference and would like to apply for funding, please fill out the form below and attach a current CV.
             </p>
 
-            <p>Deadline for applications is <span style="font-weight: bold">?? December 2018</span>.
+            <p class="lead">Deadline for applications is <span style="font-weight: bold">?? December 2018</span>.
             We will then evaluate all applications and inform you about the decisions in the beginning of 2019.
             </p>
 
@@ -467,7 +467,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Venue</h2>
-            <p>The conference takes place at the Mathematikon of the University of Heidelberg, <a target="_blank" href="https://www.openstreetmap.org/?mlat=49.41873&mlon=8.67588#map=18/49.41873/8.67588&layers=N">Berliner Str. 41-49</a>, 69120 Heidelberg</p>
+            <p class="lead">The conference takes place at the Mathematikon of the University of Heidelberg, <a target="_blank" href="https://www.openstreetmap.org/?mlat=49.41873&mlon=8.67588#map=18/49.41873/8.67588&layers=N">Berliner Str. 41-49</a>, 69120 Heidelberg</p>
 
             <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=8.67150127887726%2C49.417499523619874%2C8.67922604084015%2C49.420060955862674&amp;layer=mapnik&amp;marker=49.41878025645249%2C8.675363659858704">
             </iframe>
