link zur conference

--- a/teaching.html
+++ b/teaching.html
@@ -42,6 +42,7 @@
 				</header>
 				<p>Mean Curvature Flow</p>
 				<ul>
+					<li><a href="MCF/MCF.pdf">Skript</a></li>
 					<li><a href="MCF/MCF-1.pdf">&Uuml;bungsblatt 1</a></li>
 					<li><a href="MCF/MCF-2.pdf">&Uuml;bungsblatt 2</a></li>
         </ul>
