--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 				<p>I am a Postdoc with the research group <a href="http://www.math.uni-konstanz.de/~schnuere/ag.html" target="blank">Differentialgeometrie</a>
 					of Prof. Dr. Oliver Sch&uuml;rer at Universit&auml;t Konstanz since October 2017.
 				</p>
+				<p>I am one of the organizers of the conference <a href="https://gagt19.github.io" target="blank">Geometric Analysis and Geometric Topology</a>
+					at the University of Heidelberg, 25 - 28 February 2019.
+				</p>
 			</div>
 		</article>
 	</div>
