--- a/teaching.html
+++ b/teaching.html
@@ -45,6 +45,7 @@
 					<li><a href="MCF/MCF.pdf">Skript</a></li>
 					<li><a href="MCF/MCF-1.pdf">&Uuml;bungsblatt 1</a></li>
 					<li><a href="MCF/MCF-2.pdf">&Uuml;bungsblatt 2</a></li>
+					<li><a href="MCF/MCF-3.pdf">&Uuml;bungsblatt 3</a></li>
         </ul>
 				<p>Fully Nonlinear PDEs</p>
 				<ul>
