--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 					<br>79104 Freiburg im Breisgau
 					<br>Germany
 					<br>
-					<br>Email: firstname.lastname[at]uni-konstanz.de
+					<br>Email: firstname.lastname[at]math.uni-freiburg.de
 					<br>
 					<br>Office hours: Thuesday and Wednesday, 10:00 a.m. - 12:00 p.m.
 				</p><br>
